samples/_failures_safe/1761221915_cf0a47_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_521ae034.c: In function ‘main’:
./samples/SAFE/__tmp_521ae034.c:150:32: error: expected ‘)’ at end of input
  150 |         test_data[i] = (uint8_t
      |                        ~       ^
      |                                )
./samples/SAFE/__tmp_521ae034.c:150:9: error: expected declaration or statement at end of input
  150 |         test_data[i] = (uint8_t
      |         ^~~~~~~~~
./samples/SAFE/__tmp_521ae034.c:150:9: error: expected declaration or statement at end of input
